@@ -20,6 +20,8 @@ git-annex (8.20201117) UNRELEASED; urgency=medium
     locally.
   * Fix building without the torrent library.
     Thanks, Kyle Meyer.
+  * upgrade: Support an edge case upgrading a v5 direct mode repo
+    where nothing had ever been committed to the head branch.
 
  -- Joey Hess <id@joeyh.name>  Mon, 16 Nov 2020 09:38:32 -0400
 
